# DicomSorter

./: .gitignore  DICOM SORTING SCRIPT.ipynb  app.spec  pyproject.toml
src/: playground2.py  test.py
src/dicomsorter/: __main__.py  app.py  playground.py
src/dicomsorter/assets/: settings.toml
src/dicomsorter/controls/: dicom.py  explorer.py  settings.py
src/dicomsorter/userinterface/: mainview.py  settingsview.py
