[project]
name = "dicomsorter"
version = "1.1"
description = "DORA: DICOM Organizer Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydicom>=3.0.1",
    "pyinstaller>=6.16.0",
]

[project.scripts]
ds = "dicomsorter.app:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.tagerts.wheel]
packages = ['src/dicomsorter']
