[project]
name = "dicomsorter"
version = "1.4"
description = "DORA: DICOM Organizer Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydicom>=3.0.1",
    "pyinstaller>=6.16.0",
    "toml>=0.10.2",
]

[project.scripts]
app = "dicomsorter.app:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/dicomsorter']
