[project]
name = "dicomsorter"
version = "1.5"
description = "DORA: DICOM Organizer Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gdcm>=1.1",
    "pillow>=12.1.1",
    "pydicom>=3.0.1",
    "pyinstaller>=6.16.0",
    "pylibjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.1",
    "scipy>=1.17.1",
    "toml>=0.10.2",
]

[project.scripts]
app = "dicomsorter.app:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/dicomsorter']
